# python

./: battle.py  capacitor.py  ft_garden_analytics.py  tournament.py
Cosmic-Data/ex0/: space_station.py
Cosmic-Data/ex1/: alien_contact.py
Cosmic-Data/ex2/: space_crew.py
Cosmic_Data/ex0/: space_station.py
Cosmic_Data/ex1/: alien_contact.py
Cosmic_Data/ex2/: space_crew.py
Data-Quest/ex0/: ft_command_quest.py
Data-Quest/ex1/: ft_score_analytics.py
Data-Quest/ex2/: ft_coordinate_system.py
Data-Quest/ex3/: ft_achievement_tracker.py
Data-Quest/ex4/: ft_inventory_system.py
Data-Quest/ex5/: ft_data_stream.py
Data-Quest/ex6/: ft_data_alchemist.py
Data_Archivist/ex0/: ft_ancient_text.py
Data_Archivist/ex1/: ft_archive_creation.py
Data_Archivist/ex2/: ft_stream_management.py
Data_Archivist/ex3/: ft_vault_security.py
Data_Deck/: battle.py  capacitor.py  tournament.py
Data_Deck/ex0/: creature.py  factories.py
The-codex/: build.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
The_Matrix/ex1/: loading.py  pyproject.toml  requirements.txt
code_Nexus/: data_processor.py  data_stream.py
ex0/: __init__.py  creature.py  factories.py
ex1/: __init__.py  creatures.py  factories.py
ex2/: __init__.py  exceptions.py  ft_plant_growth.py  strategies.py  tournament_helpers.py
ex4/: ft_garden_security.py
ex5/: ft_plant_types.py
(+29 files in other folders)
