[project]
name = "ex1"
version = "0.1.0"
description = "package management and data analysis"
authors = [
    {name = "mhaddad"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas (==3.0.3)",
    "numpy (==2.5.1)",
    "matplotlib (==3.11.0)",
    "requests (==2.34.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
